--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ div.row {
     display: flex;
     width: 2rem; 
     height: 2rem;
-    background-color: white;
     background-position: center;
     background-size: 29px;
     border: 1px solid blue;
@@ -30,6 +29,7 @@ div.row {
     width: 1.5rem;
     height: 1.5rem;
     border-radius: 100%;
+    z-index: -1;
 }
 
 .red {
