--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
+@keyframes discDrop{
+    0%{
+        top: -250px;
+    }
+}
+
 body{
     width: 100% ; 
     margin: 0;
     background-size: 20px;
-   
 }
-
 
 section.container {
     display: flex;
@@ -30,6 +34,9 @@ div.row {
     height: 1.5rem;
     border-radius: 100%;
     z-index: -1;
+    animation: discDrop 0.5s ease-in;
+    position: relative;
+    top: 0;
 }
 
 .red {
