--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ body{
     width: 100% ; 
     margin: 0;
     background-size: 20px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 section.container {
@@ -37,6 +39,10 @@ div.row {
     animation: discDrop 0.5s ease-in;
     position: relative;
     top: 0;
+}
+
+.message{
+    width: 100%;
 }
 
 .red {
