--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 :root{
-    --backgroundColor: #ffff;    
+    --backgroundColor: #ffffff;    
     --player1Color: #2BFF88;
     --player2Color: #FA8BFF;
     --foregroundColor: #000;
-    --efectColor: #7bcfff;
+    --efectColor: #fdfdfd;
     --highlightColor: #ffcc23;
 }
 
@@ -26,6 +26,7 @@ body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--backgroundColor);
+    box-sizing: border-box;
 }
 
 section.container {
@@ -46,10 +47,19 @@ div.row {
     align-items: center;
 }
 
+#discColor{
+    border-top: 8px solid var(--player1Color);
+}
+
 .title{
-    color: var(--efectColor);
+    color: var(--foregroundColor);
     font-weight: bold;
     font-size: 3rem;
+}
+
+.title--hidden{
+    font-size: 2rem;
+    color: var(--backgroundColor);;
 }
 
 .text{
@@ -123,7 +133,7 @@ div.row {
     position: relative;
     box-sizing: border-box;
     cursor: pointer;
-    transition: all 400ms ease;
+    transition: all 400ms ease-in;
     outline: none;
 }
 
@@ -142,6 +152,11 @@ div.row {
     opacity: 0.5;
     border-radius: 10px;
     transition: all 1s ease-in;
+}
+
+.efeito-1-changeColor::before{
+    height: 66px;
+    border-radius: 4px;
 }
 
 .efeito-1:hover::before{
